Remove line height and letter spacing to avoid header overflow issue #010

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@ h2 {
 .header {
     grid-area: hd;
     color: rgba(7, 117, 36, 0.5);
-    line-height: 75px;
+    /*    line-height: 75px; 20/04/23 DMcC - was 75px, modified to reduce header size on all screens */
 }
 
 #logo {
@@ -69,9 +69,9 @@ h2 {
 
 #menu,
 #logo {
-    line-height: 75px;
+    /* line-height: 75px 20/04/23 DMcC - modified to remove line-height as think this is contributing to overspill large header on small screen */
     grid-area: hd;
-    letter-spacing: 4px;
+    /* letter-spacing: 4px;   20/04/23 DMcC - was 75px, modified to reduce header size on all screens */
 }
 
 
@@ -349,7 +349,7 @@ img {
 
     body {
         grid-template-columns: 100%;
-        grid-template-rows: 225px auto auto auto 75px;
+        grid-template-rows: 150px auto auto auto 75px;
         grid-template-areas:
             "hd"
             "main-center"
