--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -59,7 +59,8 @@ h2 {
 .header {
     grid-area: hd;
     color: rgba(7, 117, 36, 0.5);
-    line-height: 75px;
+/*    line-height: 75px; 20/04/23 DMcC - was 75px, modified to reduce header size on all screens */
+        grid
 }
 
 #logo {
@@ -69,9 +70,9 @@ h2 {
 
 #menu,
 #logo {
-    line-height: 75px;
+    /*    line-height: 75px; 20/04/23 DMcC - was 75px, modified to reduce header size on all screens */
     grid-area: hd;
-    letter-spacing: 4px;
+    /* letter-spacing: 4px; 20/04/23 DMcC:  removed this as its affecting a hidden wrap issue 010 */
 }
 
 
@@ -349,7 +350,7 @@ img {
 
     body {
         grid-template-columns: 100%;
-        grid-template-rows: 225px auto auto auto 75px;
+        grid-template-rows: 150px auto auto auto 75px; /* 20/04/23 DMcC - modified from 225 to 150px as this was causing very large header on small screen */
         grid-template-areas:
             "hd"
             "main-center"
